Rename project and update logging configuration
Renamed project files and identifiers from 'poc-kafka-error-handling' to 'mule-kafka-error-handling' in pom.xml and source files. Removed SIEM-specific RollingFile appender and related loggers from log4j2.xml to clean up logging configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.mycompany</groupId>
-	<artifactId>poc-kafka-error-handling</artifactId>
+	<groupId>com.github.stn1slv</groupId>
+	<artifactId>mule-kafka-error-handling</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>mule-application</packaging>
 
-	<name>poc-kafka-error-handling</name>
+	<name>mule-kafka-error-handling</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
